add user listing endpoint for admins
